added in some starting css and login

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,6 +1,41 @@
-/* This is an example of using Sass, otherwise plain CSS works too*/
-$primary-background: pink;
+@import 'variables';
+
+*,
+*:after,
+*:before {
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
 
 body {
   background-color: $primary-background;
+  font-family: 'Nanum Gothic', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 15%;
+  color: $primary-color;
+}
+
+h1 {
+  text-align: center;
+}
+
+.main-login {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.user-login,
+.password {
+  background-color: $password-background-color;
+  border: none;
+  padding: .2rem;
+  margin: .5rem 0;
+}
+
+.error {
+  background-color: green;
 }
